--- a/index.html
+++ b/index.html
@@ -1,23 +1,30 @@
-<!DOCTYPE html>
-<html lang="pt">
+<!doctype html>
+<html>
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
 		<!--CSS------------>
+		<!--FontAwesome---->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+		<!--Style---------->
 		<link rel="stylesheet" href="CSS/style.css" type="text/css">
+		<!--Bootstrap------>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 		
-		<!--scripts-------->
+		<!--Scripts-------->
 		<!--JS------------->
+		<!--FontAwesome---->
 		<script src="https://kit.fontawesome.com/8a180405a8.js" crossorigin="anonymous"></script>
+		<!--JQuery--------->
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+		<!--MainJS--------->
 		<script src="JS/mainJS.js"></script>
+		<!--FBPlugin------->
 		<script async defer crossorigin="anonymous" src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v7.0" nonce="72qfw3Vp"></script>
+		<!--Bootstrap------>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-		
 		<!--Rest----------->
 		<title>Photus&amp;Retratus</title>
 	</head>
@@ -31,10 +38,10 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item">
-						<a class="nav-link" id="navAboutUs" href="#">Sobre Nós</a>
+						<a class="nav-link" id="navAboutUs" href="index.html">Sobre Nós</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" id="navInfo" href="#">Contactos</a>
+						<a class="nav-link" id="navInfo" href="contacts.html">Contactos</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" id="navForm" href="#">Fale connosco</a>
@@ -43,145 +50,60 @@
 			</div>
 		</nav>
 		<div class="container" id="Home">
-			<!--<div class="row">
+			<div class="row">
 				<div class="col">
-				<div class="container-flow">
-				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-				<ol class="carousel-indicators">
-				<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-				<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-				<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-				</ol>
-				<div class="carousel-inner">
-				<div class="carousel-item active">
-				<img class="d-block w-100" src="IMGS/HDR_Sem%20T%C3%ADtulo1.jpg" alt="First slide">
-				<div class="carousel-caption d-none d-md-block">
-				<h5>Teste1</h5>
-				<p>Teste2</p>
+					<div class="container-flow">
+						<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+							<ol class="carousel-indicators">
+								<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+								<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+								<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+							</ol>
+							<div class="carousel-inner">
+								<div class="carousel-item active">
+									<img class="d-block w-100" src="IMGS/HDR_Sem%20T%C3%ADtulo1.jpg" alt="First slide">
+									<div class="carousel-caption d-none d-md-block">
+										<h5>Teste1</h5>
+										<p>Teste2</p>
+									</div>
+								</div>
+								<div class="carousel-item">
+									<img class="d-block w-100" src="IMGS/HDR_Sem%20T%C3%ADtulo2.jpg" alt="Second slide">
+									<div class="carousel-caption d-none d-md-block">
+										<h5>Teste1</h5>
+										<p>Teste2</p>
+									</div>
+								</div>
+								<div class="carousel-item">
+									<img class="d-block w-100" src="IMGS/HDR_Sem%20T%C3%ADtulo3.jpg" alt="Third slide">
+									<div class="carousel-caption d-none d-md-block">
+										<h5>Teste1</h5>
+										<p>Teste2</p>
+									</div>
+								</div>
+							</div>
+							<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+								<span class="sr-only">Previous</span>
+							</a>
+							<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+								<span class="carousel-control-next-icon" aria-hidden="true"></span>
+								<span class="sr-only">Next</span>
+							</a>
+						</div>
+					</div>
 				</div>
-				</div>
-				<div class="carousel-item">
-				<img class="d-block w-100" src="IMGS/HDR_Sem%20T%C3%ADtulo2.jpg" alt="Second slide">
-				<div class="carousel-caption d-none d-md-block">
-				<h5>Teste1</h5>
-				<p>Teste2</p>
-				</div>
-				</div>
-				<div class="carousel-item">
-				<img class="d-block w-100" src="IMGS/HDR_Sem%20T%C3%ADtulo3.jpg" alt="Third slide">
-				<div class="carousel-caption d-none d-md-block">
-				<h5>Teste1</h5>
-				<p>Teste2</p>
-				</div>
-				</div>
-				</div>
-				<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="sr-only">Previous</span>
-				</a>
-				<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="sr-only">Next</span>
-				</a>
-				</div>
-				</div>
-				</div>
-			</div>-->
+			</div>
 			<div class="row" id="AboutUs">
-			</div>
-			<div class="row" id="Info">
-				<div class="col" id="Contacts">
-					<h1>Contactos</h1>
-					<ul class="list-group list-group-horizontal">
-						<li class="list-group-item"><i class="fa fa-phone" aria-hidden="true"></i></li>
-						<li class="list-group-item">238 049 </li>
-					</ul>
-					<ul class="list-group list-group-horizontal">
-						<li class="list-group-item"><i class="fa fa-mobile" aria-hidden="true"></i></li>
-						<li class="list-group-item">967 991 543 </li>
-					</ul>
-					<ul class="list-group list-group-horizontal">
-						<li class="list-group-item"><i class="fa fa-envelope-o" aria-hidden="true"></i></li>
-						<li class="list-group-item">photuseretratus@gmail.com</li>
-					</ul>
-					<ul class="list-group list-group-horizontal">
-						<li class="list-group-item"><i class="fa fa-map-marker" aria-hidden="true"></i></li>
-						<li class="list-group-item">Rua Doutor Adelino Júnior Mendes Abreu 2A, Oliveira do Hospital </li>
-					</ul>
-					<div class="fb-page" data-href="https://www.facebook.com/Photusretratus/" data-tabs="" data-width="500" data-height="" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/Photusretratus/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Photusretratus/">photus&amp;retratus</a></blockquote></div>
-				</div>
-				<div class="col" id="Map">
-					<h1>Econtre-nos</h1>
-					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12160.748391769901!2d-7.8559553!3d40.3603756!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf3bf40b45ee127d7!2sPhotus%26Retratus!5e0!3m2!1spt-PT!2spt!4v1595344808189!5m2!1spt-PT!2spt" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-				</div>
-			</div>
-			<div class="row" id="Form">
 				<div class="col">
-					<h1>Fale connosco</h1>
-					<form id="contactForm" action="https://submit-form.com/cNbbnnMyrWBDZtr-jBBmW" target="_self">
-						<div class="form-group">
-							<select id="formType" class="form-control">
-								<option hidden disabled selected value>Escolha</option>
-								<option value="Message">Enviar mensagem</option>
-								<option value="Print">Enviar fotografias</option>
-								<option value="Schedule">Marcar reunião</option>
-							</select>
-						</div>
-						<div id="nomeGroup" class="form-group">
-							<label for="name">Nome</label>
-							<input type="text" class="form-control" id="name" placeholder="O seu nome">
-						</div>
-						<div class="form-group">
-							<div id="formContacts" class="form-row">
-								<div class="col">
-									<label for="telephone">Telemovel</label>
-									<input type="text" class="form-control" id="telephone" placeholder="O seu numero de telemovel">
-								</div>
-								<div class="col">
-									<label for="email">Email</label>
-									<input type="text" class="form-control" id="email" placeholder="O seu email">
-								</div>
-							</div>
-						</div>
-						<div id="formMessage" style="display:none">
-							<div class="form-group">
-								<label for="subject">Assunto</label>
-								<input type="text" class="form-control" id="subject" placeholder="Assunto">
-							</div>
-							
-							<div class="form-group">
-								<label for="messageCorp">Mensagem</label>
-								<textarea class="form-control" id="messageCorp" rows="5" style="resize:none"></textarea>
-							</div>
-						</div>
-						<div class="form-group" id="formPrint" style="display:none">
-							<div class="custom-file">
-								<label class="custom-file-label" for="fileSubmission">Escolha as fotografias para imprimir</label>
-								<input type="file" class="custom-file-input" id="fileSubmission" multiple>
-							</div>
-						</div>
-						<div id="formSchedule" class="form-group" style="display:none">
-							<div class="form-group">
-								<label for="subjectMeeting">Assunto da reunião</label>
-								<input type="text" class="form-control" id="subjectMeeting" placeholder="Assunto da reunião">
-							</div>
-							<div id="date" class="form-row">
-								<div class="col">
-									<label for="day">Dia</label>
-									<input type="date" class="form-control" id="day">
-								</div>
-								<div class="col">
-									<label for="time">Hora</label>
-									<input type="time" class="form-control" id="time">
-								</div>
-							</div>
-						</div>
-						<div id="submit" class="form-group">
-							<button class="btn btn-primary" type="submit">Submeter</button>
-						</div>
-					</form>
 				</div>
 			</div>
 		</div>
+		<footer class="footer">
+			<div class="container">
+				<span class="text-muted">Place sticky footer content here.</span>
+			</div>
+		</footer>
 	</body>
+ </script>
 </html>																																						
