--- a/public_html/contacts.html
+++ b/public_html/contacts.html
@@ -11,13 +11,14 @@
 		<link rel="stylesheet" href="CSS/style.css" type="text/css">
 		<!--Bootstrap------>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
 		
 		<!--Scripts-------->
 		<!--JS------------->
 		<!--FontAwesome---->
 		<script src="https://kit.fontawesome.com/8a180405a8.js" crossorigin="anonymous"></script>
-		<!--JQuery--------->
-		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+		<!--JQuery---------	>
+			<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 		<!--MainJS--------->
 		<script src="JS/mainJS.js"></script>
 		<!--FBPlugin------->
@@ -25,14 +26,15 @@
 		<!--Bootstrap------>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-		<!--Captcha3------->
-		<script src="https://www.google.com/recaptcha/api.js?render=6LfmF8AZAAAAAFNT2ytbglM2hGpeJif1CmZgZZXm"></script>
+		<!--Captcha3
+			<script src="https://www.google.com/recaptcha/api.js?render=6LfmF8AZAAAAAFNT2ytbglM2hGpeJif1CmZgZZXm"></script>
+		------->
 		<!--Rest----------->
 		<title>Photus&amp;Retratus</title>
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-				<a class="navbar-brand" href="index.html"> Photus&amp;Retratus </a>
+			<a class="navbar-brand" href="index.html"> Photus&amp;Retratus </a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -46,100 +48,49 @@
 			</div>
 		</nav>
 		<div class="container" id="Contacts">
-			<div class="row" id="Info">
-				<div class="col-md" id="Contacts">
-					<h1>Contactos</h1>
-					<ul class="list-group list-group-horizontal">
-						<li class="list-group-item"><i class="fa fa-phone" aria-hidden="true"></i></li>
-						<li class="list-group-item">238 049 </li>
-					</ul>
-					<ul class="list-group list-group-horizontal">
-						<li class="list-group-item"><i class="fa fa-mobile" aria-hidden="true"></i></li>
-						<li class="list-group-item">967 991 543 </li>
-					</ul>
-					<ul class="list-group list-group-horizontal">
-						<li class="list-group-item"><i class="fa fa-envelope-o" aria-hidden="true"></i></li>
-						<li class="list-group-item">photuseretratus@gmail.com</li>
-					</ul>
-					<ul class="list-group list-group-horizontal">
-						<li class="list-group-item"><i class="fa fa-map-marker" aria-hidden="true"></i></li>
-						<li class="list-group-item">Rua Doutor Adelino Júnior Mendes Abreu 2A, Oliveira do Hospital </li>
-					</ul>
+			<h1>Econtre-nos</h1>
+			<div class="row">
+				<div class="col-md-6">
+					<div class="ratio" style="--bs-aspect-ratio: 50%;" id="Map">
+						<iframe class= "embed-responsive-item"
+						frameborder="0" style="border:0"
+						src="https://www.google.com/maps/embed/v1/place
+						?key=AIzaSyAZ1JdxFKSHMBNskgrWJgBPHP6iMbejEwo
+						&q=place_id:ChIJTybGf_HVIg0R1yfhXrRAv_M"
+						allowfullscreen>
+						</iframe>
+					</div>
 				</div>
-				<div class="col-md" id="Map">
-					<h1>Econtre-nos</h1>
-					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12160.748391769901!2d-7.8559553!3d40.3603756!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf3bf40b45ee127d7!2sPhotus%26Retratus!5e0!3m2!1spt-PT!2spt!4v1595344808189!5m2!1spt-PT!2spt" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+				<div class="col-md-6">
+					TESTE
 				</div>
 			</div>
-		</div>
-		<div class="container" id="Form">
-			<div class="row">
-				<div class="col">
-					<h1>Fale connosco</h1>
-					<form id="contactForm" method="POST" name="form" action="PHP/form.php" enctype="multipart/form-data">
-						<div class="form-group">
-							<select name="formType" id="formType" class="form-control">
-								<option hidden disabled selected value>Escolha o tema de contacto</option>
-								<option value="Message">Enviar mensagem</option>
-								<option value="Print">Enviar fotografias</option>
-								<option value="Schedule">Marcar reunião</option>
-							</select>
+			<div class="row justify-content-center text-center" id="Info">
+				<div class="col-md-3" id = "email">
+					<img class="img-fluid" src ="assets/email.png">
+					<div class="row" id = "email-content">
+						<div class="col-md-12">
+							<h3>photuseretratus@gmail.com</h3>
 						</div>
-						<div id="nameGroup" class="form-group">
-							<label for="names">Nome</label>
-							<input name="name" type="text" class="form-control" id="names" placeholder="O seu nome" required="required">
+					</div>
+				</div>
+				<div class="col-md-3" id="phone">
+					<img class="img-fluid" src ="assets/phone.png">
+					<div class="row" id = "phone-content">
+						<div class="col-md-12">
+							<h3>967 991 543</h3>
 						</div>
-						<div class="form-group">
-							<div id="formContacts" class="form-row">
-								<div class="col">
-									<label for="telephone">Telemovel</label>
-									<input name="telephone" type="text" class="form-control" id="telephone" placeholder="O seu numero de telemovel">
-								</div>
-								<div class="col">
-									<label for="email">Email</label>
-									<input name="email" type="text" class="form-control" id="email" placeholder="O seu email">
-								</div>
-							</div>
+					</div>
+				</div>
+				<div class="col-md-3" id="smartphone">
+					<img class="img-fluid" src ="assets/smartphone.png">
+					<div class="row" id = "smartphone-content">
+						<div class="col-md-12">
+							<h3>238 085 409</h3>
 						</div>
-						<div id="formMessage" style="display:none">
-							<div class="form-group">
-								<label for="subject">Assunto</label>
-								<input name="subject" type="text" class="form-control" id="subject" placeholder="Assunto">
-							</div>
-							<div class="form-group">
-								<label for="messageCorp">Mensagem</label>
-								<textarea name="messageCorp" class="form-control" id="messageCorp" rows="5" style="resize:none"></textarea>
-							</div>
-						</div>
-						<div class="form-group" id="formPrint" style="display:none">
-							<div class="custom-file">
-								<label class="custom-file-label" for="fileSubmission">Escolha as fotografias para imprimir</label>
-								<input name="fileSubmission[]" type="file" class="custom-file-input" id="fileSubmission" multiple>
-							</div>
-						</div>
-						<div id="formSchedule" class="form-group" style="display:none">
-							<div class="form-group">
-								<label for="subjectMeeting">Assunto da reunião</label>
-								<input name="subjectMeeting" type="text" class="form-control" id="subjectMeeting" placeholder="Assunto da reunião">
-							</div>
-							<div id="date" class="form-row">
-								<div class="col">
-									<label for="day">Dia</label>
-									<input name="day" type="date" class="form-control" id="day">
-								</div>
-								<div class="col">
-									<label for="time">Hora</label>
-									<input name="time" type="time" class="form-control" id="time">
-								</div>
-							</div>
-						</div>
-						<div id="submit" class="form-group" style="display:none">
-							<input type="hidden" id="g-recaptcha-response" name="g-recaptcha-response">
-							<input type="submit" name="submit" class="btn btn-primary">
-						</div>
-					</form>
+					</div>
 				</div>
 			</div>
 		</div>
 	</body>
-</html>
+</html>													
