--- a/public_html/contacts.html
+++ b/public_html/contacts.html
@@ -10,24 +10,22 @@
 		<!--Style---------->
 		<link rel="stylesheet" href="CSS/style.css" type="text/css">
 		<!--Bootstrap------>
-		<!--link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"-->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 		
 		<!--Scripts-------->
 		<!--JS------------->
 		<!--FontAwesome---->
 		<script src="https://kit.fontawesome.com/8a180405a8.js" crossorigin="anonymous"></script>
 		<!--JQuery---------	>
-			<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
 		<!--MainJS--------->
 		<script src="JS/mainJS.js"></script>
 		<!--FBPlugin------->
 		<script async defer crossorigin="anonymous" src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v7.0" nonce="72qfw3Vp"></script>
-		<!--Bootstrap------
+		<!--Bootstrap------>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-		<!--Captcha3
-			<script src="https://www.google.com/recaptcha/api.js?render=6LfmF8AZAAAAAFNT2ytbglM2hGpeJif1CmZgZZXm"></script>
-		------->
+		
 		<!--Rest----------->
 		<title>Photus&amp;Retratus</title>
 	</head>
