--- a/public_html/index.html
+++ b/public_html/index.html
@@ -93,7 +93,7 @@
 		</section>
 		<footer class="footer">
 			<div class="container">
-				<span class="text-muted">Place sticky footer content here.</span>
+				<span class="text-muted">Place sticky footer content he2re.</span>
 			</div>
 		</footer>
 	</body>
