--- a/public_html/index.html
+++ b/public_html/index.html
@@ -103,7 +103,7 @@
 	</section>
 	<footer class="footer">
 		<div class="container">
-			<span class="text-muted">Place sticky footer contenfinalt here.</span>
+			<span class="text-muted"></span>
 		</div>
 	</footer>
 </body>
