--- a/public_html/index.html
+++ b/public_html/index.html
@@ -26,7 +26,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	</head>
     <body>
-		<div class="header bg-black">
+		<div class="header bg-dark text-white">
 			<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
 				<div class="container px-4 px-lg-5">
 					<a class="navbar-brand" href="#page-top">Photus &amp Retratus</a>
