--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<div class="container px-4">
 					<div class="row gx-0 align-items-center">
 						<div class="col-lg-8">
-							<img class="img-fluid" src="/assets/self.webp">
+							<img class="img-fluid" src="assets/self.webp">
 						</div>
 						<div class="col" id="textCol">
 							<div class="featured-text text-center">
