--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							<img src="https://ik.imagekit.io/minecopre/self.jpg">
 						</div>
 						<div class="col-lg-6 bg-dark text-white">
-							<h1>JPG</h1>
+							<h1><?php echo "This message is from server side." ?></h1>
 						</div>
 					</div>
 					<div class="row gx-0 mb-5 mb-lg-0">
