--- a/public_html/index.html
+++ b/public_html/index.html
@@ -32,8 +32,10 @@
 	<!--FontAwesome---->
 	<script src="https://kit.fontawesome.com/8a180405a8.js" crossorigin="anonymous"></script>
 	<!--JQuery-------->
-	<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-	<script src="https://code.jquery.com/color/jquery.color.plus-names-2.2.0.js" integrity="sha256-B2NKhQ/4wyx0RUkvxp34OVk2/+J9zwZRpFyQIst5/XY=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.js"
+		integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/color/jquery.color.plus-names-2.2.0.js"
+		integrity="sha256-B2NKhQ/4wyx0RUkvxp34OVk2/+J9zwZRpFyQIst5/XY=" crossorigin="anonymous"></script>
 	<!--Bootstrap------>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
@@ -71,15 +73,19 @@
 				</div>
 				<div class="col" id="textCol">
 					<div class="featured-text text-center">
-						<h2>Sobre mim</h2>
-						<p>História fofa</p>
-						<p>sobre ti e a fotografia</p>
+						<blockquote class="blockquote">
+							<p>Pessoas fazem fotos de qualquer coisa bonita...
+								Fotógrafos fazem fotos bonitas de qualquer coisa.</p>
+						</blockquote>
+						<figcaption class="blockquote-footer">
+							<cite title="Source Title">Rafael Correa Batista</cite>
+						</figcaption>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="projects-section" id="Projects">
+	<!--section class="projects-section" id="Projects">
 		<div class="container px-4 text-center justify-content-center">
 			<div class="row gx-0 mb-5 mb-lg-0 ">
 				<div class="col col-lg-6">
@@ -107,9 +113,9 @@
 			</div>
 		</div>
 		<div class="modal-dialog modal-fullscreen">
-			
+
 		</div>
-	</section>
+	</section-->
 	<section class="contact-section" id="Contact">
 		<div class="container px-4">
 			<div class="row gx-4 ">
