--- a/public_html/index.html
+++ b/public_html/index.html
@@ -52,7 +52,7 @@
 	<div style="visibility:hidden" id="hiddenContent">
 		<nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
 			<div class="container px-4 px-lg-5">
-				<a class="navbar-brand" href="index">Photus&ampRetratus</a>
+				<a class="navbar-brand" href="index.html">Photus&ampRetratus</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 					aria-expanded="false" aria-label="Toggle navigation">
