--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,7 +4,6 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes" />
-
 	<meta name="description" content="PhotusERetratus Website" />
 	<meta name="author" content="MineCopre" />
 
@@ -24,45 +23,41 @@
 	<!--Style---------->
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
 	<!--Bootstrap------>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"
-		disabled>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
 	<!--JS------------->
 	<!--FontAwesome---->
 	<script src="https://kit.fontawesome.com/8a180405a8.js" crossorigin="anonymous"></script>
 	<!--JQuery-------->
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js" 
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
 		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/color/jquery.color.plus-names-2.2.0.js"
 		integrity="sha256-B2NKhQ/4wyx0RUkvxp34OVk2/+J9zwZRpFyQIst5/XY=" crossorigin="anonymous"></script>
 	<!--Bootstrap------>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-	</script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 	<!--MainJS--------->
 	<script src="js/main.js"></script>
 </head>
 
-<body>
+<body data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="0">
 	<div class="d-flex justify-content-center" id="loading">
 		<div class="spinner-border" style="width: 25rem; height: 25rem;" role="status">
 		</div>
 	</div>
 	<div style="visibility:hidden" id="hiddenContent">
-		<nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
-			<div class="container px-4 px-lg-5">
-				<a class="navbar-brand" href="index.html">Photus&ampRetratus</a>
+		<nav class="navbar navbar-expand-sm fixed-top" id="mainNav">
+			<div class="container">
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 					aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
+				<a class="navbar-brand" href="index.html">Photus&ampRetratus</a>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav ms-auto text-center">
-						<li class="nav-item" id="test1"><a class="nav-link" href="#About">Sobre</a></li>
-						<li class="nav-item" id="test2"><a class="nav-link" href="#Projects">Projectos</a></li>
-						<li class="nav-item" id="test3"><a class="nav-link" href="#Contact">Contactos</a></li>
+					<ul class="navbar-nav-scroll navbar-nav ms-auto text-left">
+						<li class="nav-item"><a class="nav-link border-bottom" href="#About">Sobre</a></li>
+						<li class="nav-item"><a class="nav-link border-bottom" href="#Projects">Projectos</a></li>
+						<li class="nav-item"><a class="nav-link border-bottom" href="#Contact">Contactos</a></li>
 					</ul>
 				</div>
 			</div>
@@ -70,29 +65,30 @@
 		<header id="masthead">
 			<img src="" alt="header.jpg">
 		</header>
-		<section class="about-section" id="About">
-			<div class="container px-4">
-				<div class="row gx-0 align-items-center">
-					<div class="col col-lg-8">
-						<img class="img-fluid" alt="self.jpg">
-					</div>
-					<div class="col" id="textCol">
-						<div class="featured-text text-center">
-							<blockquote class="blockquote">
-								<p>Pessoas fazem fotos de qualquer coisa bonita...
-									Fotógrafos fazem fotos bonitas de qualquer coisa.</p>
-							</blockquote>
-							<figcaption class="blockquote-footer">
-								<cite title="Source Title">Rafael Correa Batista</cite>
-							</figcaption>
+		<div id="main">
+			<section class="about-section" id="About">
+				<div class="container px-lg-4">
+					<div class="row gx-0 align-items-center">
+						<div class="col-lg-6">
+							<img class="img-fluid" alt="self.jpg">
+						</div>
+						<div class="col" id="textCol">
+							<div class="featured-text text-center m-1">
+								<blockquote class="blockquote">
+									<p>Pessoas fazem fotos de qualquer coisa bonita...
+										Fotógrafos fazem fotos bonitas de qualquer coisa.</p>
+								</blockquote>
+								<figcaption class="blockquote-footer">
+									<cite title="Source Title">Rafael Correa Batista</cite>
+								</figcaption>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		</section>
-		<section class="projects-section text-center" id="Projects">
-			<h1>Reportagens - brevement</h1>
-		<!--div class="container px-4 text-center justify-content-center">
+			</section>
+			<section class="projects-section text-center" id="Projects">
+				<h1>Reportagens - brevement</h1>
+				<!--div class="container px-4 text-center justify-content-center">
 			<div class="row gx-0 mb-5 mb-lg-0 ">
 				<div class="col col-lg-6">
 					<img src="self.webp">
@@ -121,62 +117,63 @@
 		<div class="modal-dialog modal-fullscreen">
 
 		</div-->
-	</section>
-		<section class="contact-section hasBackgroundImage" id="Contact">
-			<img class="backgroundImage" src="" alt="header.jpg">
-			<div class="container px-4">
-				<div class="row gx-4 ">
-					<div class="col col-md-4 mb-3 mb-md-0">
-						<div class="card py-4 h-100">
-							<div class="card-body text-center">
-								<span>
-									<i class="fas fa-map-marker-alt"></i>
-								</span>
-								<h6 class="text-uppercase m-0">Endereço</h6>
-								<hr class="my-4 mx-auto">
-								<div class="small text-black-70">
-									<strong>
-										3400-136 R. Dr. Adelinio Júnior Mendes Abreu 2A, Oliveira do Hospital
-									</strong>
+			</section>
+			<section class="contact-section hasBackgroundImage" id="Contact">
+				<img class="backgroundImage" src="" alt="header.jpg">
+				<div class="container px-4">
+					<div class="row gx-4 ">
+						<div class="col-12 col-xl-4 mb-3 mb-xl-0">
+							<div class="card py-4 h-100">
+								<div class="card-body text-center">
+									<span>
+										<i class="fas fa-map-marker-alt"></i>
+									</span>
+									<h6 class="text-uppercase m-0">Endereço</h6>
+									<hr class="my-4 mx-auto">
+									<div class="small text-black-70">
+										<strong>
+											3400-136 R. Dr. Adelinio Júnior Mendes Abreu 2A, Oliveira do Hospital
+										</strong>
+									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="col col-md-4 mb-3 mb-md-0">
-						<div class="card py-4 h-100">
-							<div class="card-body text-center">
-								<span>
-									<i class="fas fa-envelope"></i>
-								</span>
-								<h6 class="text-uppercase m-0">Email</h6>
-								<hr class="my-4 mx-auto">
-								<div class="small text-black-70">
-									<strong>
-										photuseretratus@gmail.com
-									</strong>
+						<div class="col-12 col-xl-4 mb-3 mb-xl-0">
+							<div class="card py-4 h-100">
+								<div class="card-body text-center">
+									<span>
+										<i class="fas fa-envelope"></i>
+									</span>
+									<h6 class="text-uppercase m-0">Email</h6>
+									<hr class="my-4 mx-auto">
+									<div class="small text-black-70">
+										<strong>
+											photuseretratus@gmail.com
+										</strong>
+									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="col col-md-4 mb-3 mb-md-0">
-						<div class="card py-4 h-100">
-							<div class="card-body text-center">
-								<span>
-									<i class="fas fa-phone"></i>
-								</span>
-								<h6 class="text-uppercase m-0">Phone</h6>
-								<hr class="my-4 mx-auto">
-								<div class="small text-black-70">
-									<strong>
-										+351 926 785 502
-									</strong>
+						<div class="col-12 col-xl-4 mb-5 mb-xl-0">
+							<div class="card py-4 h-100">
+								<div class="card-body text-center">
+									<span>
+										<i class="fas fa-phone"></i>
+									</span>
+									<h6 class="text-uppercase m-0">Phone</h6>
+									<hr class="my-4 mx-auto">
+									<div class="small text-black-70">
+										<strong>
+											+351 926 785 502
+										</strong>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		</section>
+			</section>
+		</div>
 	</div>
 </body>
 
